--- a/public/menu.html
+++ b/public/menu.html
@@ -601,6 +601,20 @@
                 buttonHtml = `<button class="claim-reward-button" data-quest-id="${activeQuest.id}"><i class="fa-solid fa-gift"></i> <span>Забрать</span></button>`;
             }
             
+            // --- НАЧАЛО ИЗМЕНЕНИЙ ---
+            const currentProgress = Math.min(progress, target);
+            let progressTextContent = `${currentProgress} / ${target}`;
+            const questType = activeQuest.quest_type || '';
+
+            if (questType.includes('twitch_uptime')) {
+                progressTextContent = `${currentProgress} / ${target} мин.`;
+            } else if (questType.includes('twitch_messages')) {
+                progressTextContent = `💬 ${currentProgress} / ${target}`;
+            } else if (questType.includes('telegram_messages')) {
+                progressTextContent = `✉️ ${currentProgress} / ${target}`;
+            }
+            // --- КОНЕЦ ИЗМЕНЕНИЙ ---
+
             dom.activeAutomaticQuestContainer.innerHTML = `
                 <div class="quest-card">
                     ${!isCompleted ? '<div class="active-quest-indicator">Выполняется</div>' : ''}
@@ -610,7 +624,7 @@
                         <p class="quest-subtitle">${activeQuest.description || ''}</p>
                         <div class="progress-bar">
                             <div class="progress-fill" style="width: ${percent}%;"></div>
-                            <div class="progress-content"><span class="progress-text">${Math.min(progress, target)} / ${target}</span></div>
+                            <div class="progress-content"><span class="progress-text">${progressTextContent}</span></div>
                         </div>
                         ${activeQuest.end_date ? `<div id="quest-timer-${activeQuest.id}" class="challenge-timer"></div>` : ''}
                         ${twitchNotice}
