--- a/public/events.html
+++ b/public/events.html
@@ -19,7 +19,31 @@
         body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; background-image: var(--bg-gradient); background-color: #000000; color: var(--text-color); margin: 0; padding: 15px 15px 90px; }
         .container { max-width: 800px; margin: 0 auto; }
         .page-title { text-align: center; color: #ffffff; font-size: 18px; font-weight: 600; margin-bottom: 8px; }
-        .timer { text-align: center; font-size: 1.6em; font-weight: bold; color: var(--primary-color); margin-bottom: 20px; letter-spacing: 2px; }
+        .timer { 
+            text-align: center; 
+            font-size: 1.6em; 
+            font-weight: bold; 
+            color: var(--primary-color); 
+            margin-bottom: 20px; 
+            letter-spacing: 2px; 
+            /* -- ДОБАВЬТЕ ЭТИ СТРОКИ НИЖЕ -- */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+        }
+        .loader-spinner {
+            width: 24px;
+            height: 24px;
+            border: 3px solid rgba(255, 255, 255, 0.3);
+            border-top-color: var(--primary-color);
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
+
+        @keyframes spin {
+            to { transform: rotate(360deg); }
+        }
         .events-container { display: grid; grid-template-columns: repeat(2, 1fr); gap: 10px; margin-bottom: 20px; }
         .event-card { background-color: var(--surface-glass-bg); backdrop-filter: blur(15px); border: 1px solid rgba(58, 58, 60, 0.6); border-radius: 10px; padding: 10px; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); display: flex; flex-direction: column; position: relative; transition: all 0.3s ease; }
         .event-image-container { width: 100%; padding-top: 75%; position: relative; margin-bottom: 10px; background-color: #000; border-radius: 6px; flex-shrink: 0; }
@@ -135,7 +159,7 @@
             const endTime = new Date(endTimeString).getTime();
             const update = () => {
                 const distance = endTime - new Date().getTime();
-                if (distance < 0) { timerElement.textContent = "Розыгрыш завершен!"; clearInterval(countdownInterval); return; }
+                if (distance < 0) { timerElement.innerHTML = '<span>Идет подсчет итогов...</span><div class="loader-spinner"></div>'; clearInterval(countdownInterval); return; }
                 const d = Math.floor(distance / 86400000); const h = Math.floor((distance % 86400000) / 3600000); const m = Math.floor((distance % 3600000) / 60000); const s = Math.floor((distance % 60000) / 1000);
                 timerElement.textContent = `${d}д ${h}ч ${m}м ${s}с`;
             };
