--- a/public/events.html
+++ b/public/events.html
@@ -21,21 +21,22 @@
         .page-title { text-align: center; color: #ffffff; font-size: 18px; font-weight: 600; margin-bottom: 8px; }
         .timer { 
             text-align: center; 
-            font-size: 1.6em; 
+            font-size: 1.3em;
+            font-weight: 600;
             font-weight: bold; 
             color: var(--primary-color); 
             margin-bottom: 20px; 
-            letter-spacing: 2px; 
+            letter-spacing: 1px; 
             /* -- ДОБАВЬТЕ ЭТИ СТРОКИ НИЖЕ -- */
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 10px;
+            gap: 8px;
         }
         .loader-spinner {
-            width: 24px;
-            height: 24px;
-            border: 3px solid rgba(255, 255, 255, 0.3);
+            width: 20px;
+            height: 20px;
+            border: 2px solid rgba(255, 255, 255, 0.3);
             border-top-color: var(--primary-color);
             border-radius: 50%;
             animation: spin 1s linear infinite;
