--- a/public/events.html
+++ b/public/events.html
@@ -515,18 +515,49 @@
         }
         
 async function initialize() {
+    // Эта строка позволяет OBS загрузить страницу без ошибки
+    const isTelegramApp = typeof window.Telegram !== 'undefined' && window.Telegram.WebApp.initData;
+
     try {
-        const response = await fetch('/api/v1/events/content', {cache: 'no-store'});
-        if (!response.ok) {
-            console.error("Ошибка сети при загрузке контента:", response.status, response.statusText);
-            document.body.innerHTML = `<div style="text-align:center; padding:20px;"><h1>Ошибка загрузки</h1><p>Не удалось загрузить данные событий.</p></div>`;
-            return;
+        if (isTelegramApp) {
+            // Если запущено в Telegram
+            const tg = window.Telegram.WebApp;
+            tg.ready(); 
+            tg.expand();
+            const [contentRes, userRes] = await Promise.all([
+                fetch('/api/v1/events/content', {cache: 'no-store'}),
+                fetch('/api/v1/user/me', { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ initData: tg.initData }) })
+            ]);
+
+            if (!contentRes.ok || !userRes.ok) {
+                tg.showAlert("Не удалось загрузить данные.");
+                throw new Error("Ошибка сети");
+            }
+            
+            pageContent = await contentRes.json();
+            userData = await userRes.json();
+            renderPage();
+
+            if (userData.is_admin) {
+                dom.adminControls.style.display = 'block';
+                // ... (остальной код для админки) ...
+            }
+        } else {
+            // Если запущено в обычном браузере (например, в OBS)
+            const response = await fetch('/api/v1/events/content', {cache: 'no-store'});
+            if (!response.ok) {
+                console.error("Ошибка сети при загрузке контента:", response.status, response.statusText);
+                document.body.innerHTML = `<div style="text-align:center; padding:20px;"><h1>Ошибка загрузки</h1><p>Не удалось загрузить данные событий.</p></div>`;
+                return;
+            }
+            pageContent = await response.json();
+            renderPage();
         }
-        pageContent = await response.json();
-        renderPage();
-    } catch (error) {
-        console.error("Ошибка загрузки данных:", error);
-        document.body.innerHTML = `<div style="text-align:center; padding:20px;"><h1>Ошибка</h1><p>Произошла ошибка при загрузке данных. Проверьте подключение.</p></div>`;
+    } catch (error) { 
+        console.error("Ошибка инициализации:", error); 
+        if (isTelegramApp) {
+             tg.showAlert("Не удалось загрузить данные.");
+        }
     }
 }
 
