--- a/public/events.html
+++ b/public/events.html
@@ -68,6 +68,7 @@
         .browser-view .timer {
             font-size: 4.8em; /* Увеличиваем размер шрифта в 2 раза */
             margin-bottom: 25px; /* Добавляем немного отступа снизу */
+            color: #ff9000;
         }
         
         .loader-spinner {
